[package]
name = "ipstack-geph-sample"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-channel = "2.3"
async-compat = "0.2.4"
bytes = "1.7"
clap = { version = "4.5", features = ["derive"] }
clap_derive = "4.5"
env_logger = "0.11"
etherparse = "0.14"
futures = "0.3"
ipstack-geph = "0.2"
log = "0.4"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
tun2 = { version = "3", features = ["async"] }
udp-stream = "0.0"
